--- a/index.html
+++ b/index.html
@@ -29,60 +29,66 @@
 	</div>
   <div  class="section" id="mainPageSectionThree">
 	  <div class="section3Section" id="section3Section1">
-		<table><tr><td><u> <h5>Programming Languages:</h5></u></td></tr>
-		<tr><td>  - PHP</td></tr>
-		<tr><td>  - C#</td></tr>
-	  	<tr><td>  - HTML5</td></tr>
-		<tr><td>  - CSS</td></tr>
-		<tr><td>  - Javascript</td></tr>
-		<tr><td>  - JQuery</td></tr>
-		<tr><td>  - XML</td></tr>
-		<tr><td>  - JSON</td></tr>
+		<table>
+		<tr><td><img id="myMainPagePic" src="http://www.williambreindel.com/programmingLarge.png" alt="Programming Icon"></td></tr>
+		<tr><td><h3>Programming Languages:</h3></td></tr>
+		<tr><td>PHP</td></tr>
+		<tr><td>C#</td></tr>
+	  	<tr><td>HTML5</td></tr>
+		<tr><td>CSS</td></tr>
+		<tr><td>Javascript</td></tr>
+		<tr><td>JQuery</td></tr>
+		<tr><td>XML</td></tr>
+		<tr><td>JSON</td></tr>
 		  </table>
 	  
 	  
 	  
 	  </div>
 	  <div class="section3Section" id="section3Section2">
-		  <table><tr><td><u> <h5>Additional Skills:</h5></u></td></tr>
-		<tr><td>  - MySQL</td></tr>
-		<tr><td>  - SQLite</td></tr>
-	  	<tr><td>  - Visual Studio</td></tr>
-		<tr><td>  - Linux</td></tr>
-		<tr><td>  - Raspberry Pi Development</td></tr>
-		<tr><td>  - SSH</td></tr>
-		<tr><td>  - Wordpress/Bluehost</td></tr>
+		  <table>
+			  <tr><td><img id="myMainPagePic" src="http://www.williambreindel.com/otherSkillsLarge.png" alt="Other Skills Icon"></td></tr>
+			  <tr><td><h3>Additional Skills:</h3></td></tr>
+		<tr><td>MySQL</td></tr>
+		<tr><td>SQLite</td></tr>
+	  	<tr><td>Visual Studio</td></tr>
+		<tr><td>Linux</td></tr>
+		<tr><td>Raspberry Pi Development</td></tr>
+		<tr><td>SSH</td></tr>
+		<tr><td>Wordpress/Bluehost</td></tr>
 			  </table>
 		  </div>
 	  <div class="section3Section" id="section3Section3">
-	  		<table><tr><td><u> <h5>Projects I've worked on:</h5></u></td></tr>
-		<tr><td>  - Custom Client Relationship Management Site including:</td></tr>
+	  		<table>
+				<tr><td><img id="myMainPagePic" src="http://www.williambreindel.com/projectLarge.png" alt="Projects Icon"></td></tr>
+				<tr><td><h3>Projects I've worked on:</h3></td></tr>
+		<tr><td>Custom Client Relationship Management Site including:</td></tr>
 		<tr><td>
 			<table><tr>
-				<td></td><td>- Ordering</td>
+				<td></td><td>Ordering</td>
 				</tr>
 				<tr>
-				<td></td><td>- Ticketing/Support</td>
+				<td></td><td>Ticketing/Support</td>
 				</tr>
 				<tr>
-				<td></td><td>- Knowledge Base</td>
+				<td></td><td>Knowledge Base</td>
 				</tr>
 				<tr>
-				<td></td><td>- Customer Accounts</td>
+				<td></td><td>Customer Accounts</td>
 				</tr>
 				<tr>
-				<td></td><td>- Reporting/Analytics</td>
+				<td></td><td>Reporting/Analytics</td>
 				</tr>
 				<tr>
-				<td></td><td>- FAQ/Troubleshooting Guides</td>
+				<td></td><td>FAQ/Troubleshooting Guides</td>
 				</tr>
 			</table>
 		</td></tr>
-		<tr><td>  - Cloud Kiosk Reservation System</td></tr>
-	  	<tr><td>  - Customer Stat Site</td></tr>
-		<tr><td>  - Licensing Website</td></tr>
-		<tr><td>  - Company Website</td></tr>
-		<tr><td>  - Custom Wordpress site development</td></tr>
+		<tr><td>Cloud Kiosk Reservation System</td></tr>
+	  	<tr><td>Customer Stat Site</td></tr>
+		<tr><td>Licensing Website</td></tr>
+		<tr><td>Company Website</td></tr>
+		<tr><td>Custom Wordpress site development</td></tr>
 		  </table>
 	  </div>
 
