--- a/index.html
+++ b/index.html
@@ -29,66 +29,66 @@
 	</div>
   <div  class="section" id="mainPageSectionThree">
 	  <div class="section3Section" id="section3Section1">
-		<table>
-		<tr><td><img id="myMainPagePic" src="http://www.williambreindel.com/programmingLarge.png" alt="Programming Icon"></td></tr>
-		<tr><td><h3>Programming Languages:</h3></td></tr>
-		<tr><td>PHP</td></tr>
-		<tr><td>C#</td></tr>
-	  	<tr><td>HTML5</td></tr>
-		<tr><td>CSS</td></tr>
-		<tr><td>Javascript</td></tr>
-		<tr><td>JQuery</td></tr>
-		<tr><td>XML</td></tr>
-		<tr><td>JSON</td></tr>
+		<table id="section3Table">
+			<tr><td><h3>Programming Languages</h3></td></tr>
+			<tr><td><img class="section3Icon" src="http://www.williambreindel.com/programmingLarge.png" alt="Programming Icon"></td></tr>
+			<tr><td class="section3TableColumn">PHP</td></tr>
+			<tr><td class="section3TableColumn">C#</td></tr>
+	  		<tr><td class="section3TableColumn">HTML5</td></tr>
+			<tr><td class="section3TableColumn">CSS</td></tr>
+			<tr><td class="section3TableColumn">Javascript</td></tr>
+			<tr><td class="section3TableColumn">JQuery</td></tr>
+			<tr><td class="section3TableColumn">XML</td></tr>
+			<tr><td class="section3TableColumn">JSON</td></tr>
 		  </table>
 	  
 	  
 	  
 	  </div>
 	  <div class="section3Section" id="section3Section2">
-		  <table>
-			  <tr><td><img id="myMainPagePic" src="http://www.williambreindel.com/otherSkillsLarge.png" alt="Other Skills Icon"></td></tr>
-			  <tr><td><h3>Additional Skills:</h3></td></tr>
-		<tr><td>MySQL</td></tr>
-		<tr><td>SQLite</td></tr>
-	  	<tr><td>Visual Studio</td></tr>
-		<tr><td>Linux</td></tr>
-		<tr><td>Raspberry Pi Development</td></tr>
-		<tr><td>SSH</td></tr>
-		<tr><td>Wordpress/Bluehost</td></tr>
+		  <table id="section3Table">
+			  tr><td><h3>Additional Skills</h3></td></tr>
+			  <tr><td><img class="section3Icon" src="http://www.williambreindel.com/otherSkillsLarge.png" alt="Other Skills Icon"></td></tr>
+			<tr><td class="section3TableColumn">MySQL</td></tr>
+			<tr><td class="section3TableColumn">SQLite</td></tr>
+	  		<tr><td class="section3TableColumn">Visual Studio</td></tr>
+			<tr><td class="section3TableColumn">Linux</td></tr>
+			<tr><td class="section3TableColumn">Raspberry Pi Development</td></tr>
+			<tr><td class="section3TableColumn">SSH</td></tr>
+			<tr><td class="section3TableColumn">Wordpress/Bluehost</td></tr>
 			  </table>
 		  </div>
 	  <div class="section3Section" id="section3Section3">
-	  		<table>
-				<tr><td><img id="myMainPagePic" src="http://www.williambreindel.com/projectLarge.png" alt="Projects Icon"></td></tr>
-				<tr><td><h3>Projects I've worked on:</h3></td></tr>
-		<tr><td>Custom Client Relationship Management Site including:</td></tr>
-		<tr><td>
-			<table><tr>
-				<td></td><td>Ordering</td>
+	  		<table id="section3Table">
+				<tr><td><h3>Projects I've worked on</h3></td></tr>
+				<tr><td><img id=" class="section3Icon" src="http://www.williambreindel.com/projectLarge.png" alt="Projects Icon"></td></tr>
+		<tr><td class="section3TableColumn">Custom Client Relationship Management Site including:</td></tr>
+		<tr><td class="section3TableColumn">
+			<table id="section3Table"><tr>
+				<td></td><td class="section3TableColumn">Ordering</td>
 				</tr>
 				<tr>
-				<td></td><td>Ticketing/Support</td>
+				<td></td><td class="section3TableColumn">Ticketing/Support</td>
 				</tr>
 				<tr>
-				<td></td><td>Knowledge Base</td>
+				<td></td><td class="section3TableColumn">Knowledge Base</td>
 				</tr>
 				<tr>
-				<td></td><td>Customer Accounts</td>
+				<td></td><td class="section3TableColumn">Customer Accounts</td>
 				</tr>
 				<tr>
-				<td></td><td>Reporting/Analytics</td>
+				<td></td><td class="section3TableColumn">Reporting/Analytics</td>
 				</tr>
 				<tr>
-				<td></td><td>FAQ/Troubleshooting Guides</td>
+				<td></td><td class="section3TableColumn">FAQ/Troubleshooting Guides</td>
 				</tr>
 			</table>
 		</td></tr>
-		<tr><td>Cloud Kiosk Reservation System</td></tr>
-	  	<tr><td>Customer Stat Site</td></tr>
-		<tr><td>Licensing Website</td></tr>
-		<tr><td>Company Website</td></tr>
-		<tr><td>Custom Wordpress site development</td></tr>
+		<tr><td class="section3TableColumn">Cloud Kiosk Reservation System</td></tr>
+	  	<tr><td class="section3TableColumn">Customer Stat Site</td></tr>
+		<tr><td class="section3TableColumn">Licensing Website</td></tr>
+		<tr><td class="section3TableColumn">Company Website</td></tr>
+		<tr><td class="section3TableColumn">Custom Wordpress site development</td></tr>
 		  </table>
 	  </div>
 
