--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	  </div>
 	  <div class="section3Section" id="section3Section2">
 		  <table id="section3Table">
-			  tr><td><h3>Additional Skills</h3></td></tr>
+			 <tr><td><h3>Additional Skills</h3></td></tr>
 			  <tr><td><img class="section3Icon" src="http://www.williambreindel.com/otherSkillsLarge.png" alt="Other Skills Icon"></td></tr>
 			<tr><td class="section3TableColumn">MySQL</td></tr>
 			<tr><td class="section3TableColumn">SQLite</td></tr>
