--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	  <div class="section3Section" id="section3Section3">
 	  		<table id="section3Table">
 				<tr><td><h3>Projects I've worked on</h3></td></tr>
-				<tr><td><img id=" class="section3Icon" src="http://www.williambreindel.com/projectLarge.png" alt="Projects Icon"></td></tr>
+				<tr><td><img class="section3Icon" src="http://www.williambreindel.com/projectLarge.png" alt="Projects Icon"></td></tr>
 		<tr><td class="section3TableColumn">Custom Client Relationship Management Site including:</td></tr>
 		<tr><td class="section3TableColumn">
 			<table id="section3Table"><tr>
