--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	</div>
   <div  class="section" id="mainPageSectionThree">
 	  <div class="section3Section" id="section3Section1">
-		<table id="section3Table">
+		<table class="section3Table">
 			<tr><td><h3>Programming Languages</h3></td></tr>
 			<tr><td><img class="section3Icon" src="http://www.williambreindel.com/programmingLarge.png" alt="Programming Icon"></td></tr>
 			<tr><td class="section3TableColumn">PHP</td></tr>
@@ -46,7 +46,7 @@
 	  
 	  </div>
 	  <div class="section3Section" id="section3Section2">
-		  <table id="section3Table">
+		  <table class="section3Table">
 			 <tr><td><h3>Additional Skills</h3></td></tr>
 			  <tr><td><img class="section3Icon" src="http://www.williambreindel.com/otherSkillsLarge.png" alt="Other Skills Icon"></td></tr>
 			<tr><td class="section3TableColumn">MySQL</td></tr>
@@ -59,30 +59,20 @@
 			  </table>
 		  </div>
 	  <div class="section3Section" id="section3Section3">
-	  		<table id="section3Table">
+	  		<table class="section3Table">
 				<tr><td><h3>Projects I've worked on</h3></td></tr>
 				<tr><td><img class="section3Icon" src="http://www.williambreindel.com/projectLarge.png" alt="Projects Icon"></td></tr>
 		<tr><td class="section3TableColumn">Custom Client Relationship Management Site including:</td></tr>
 		<tr><td class="section3TableColumn">
-			<table id="section3Table"><tr>
-				<td></td><td class="section3TableColumn">Ordering</td>
-				</tr>
-				<tr>
-				<td></td><td class="section3TableColumn">Ticketing/Support</td>
-				</tr>
-				<tr>
-				<td></td><td class="section3TableColumn">Knowledge Base</td>
-				</tr>
-				<tr>
-				<td></td><td class="section3TableColumn">Customer Accounts</td>
-				</tr>
-				<tr>
-				<td></td><td class="section3TableColumn">Reporting/Analytics</td>
-				</tr>
-				<tr>
-				<td></td><td class="section3TableColumn">FAQ/Troubleshooting Guides</td>
-				</tr>
-			</table>
+			<ul class="section3List">
+				<li>Ordering</li>
+				<li>Ticketing/Support</li>
+				<li>Knowledge Base</li>
+				<li>Customer Accounts</li>
+				<li>Reporting/Analytics</li>
+				<li>FAQ/Troubleshooting Guides</li>
+			
+			</ul>
 		</td></tr>
 		<tr><td class="section3TableColumn">Cloud Kiosk Reservation System</td></tr>
 	  	<tr><td class="section3TableColumn">Customer Stat Site</td></tr>
