--- a/index.html
+++ b/index.html
@@ -21,11 +21,16 @@
 	  </div>
 	</div>
   <div  class="section" id="mainPageSectionTwo">
-	  <h2>Hi, my name is William Breindel. My friends call me Bill.</h2><br><h4> I'm a full-stack web developer</h4>
-	  <div id="imageDiv">
+	  <h2>Hi, my name is William Breindel. My friends call me Bill.<br> I'm a full-stack web developer</h2>
 	  <img id="myMainPagePic" src="http://www.williambreindel.com/me1.png" alt="My Picture">
-	</div>
-	  <h2>I've been fortunate to have a career that I'm passionate about for the past fifteen years, working for an organization that designs and sells lasertag equipment across the world. I've held a variety of roles including business analysis, client management, and quality assurance, but for the past several years my focus has been on programming. I am motivated by my relationship with clients and my love of the game to create fun, interactive user experiences. I build and maintain websites, databases, and perform server maintenance and updates. When I'm not working, I volunteer my time with The North Ridge, a local Star Wars group that appears throughout the Buffalo area at charity events, most notably Star Wars Night with the Buffalo Bisons.</h2>
+	  <h3 id="section3Bio">I've been fortunate to have a career that I'm passionate about for the past fifteen years, 
+		  working for an organization that designs and sells lasertag equipment across the world. 
+		  I've held a variety of roles including business analysis, client management, and quality assurance, 
+		  but for the past several years my focus has been on programming. I am motivated by my relationship 
+		  with clients and my love of the game to create fun, interactive user experiences. I build and maintain websites, 
+		  databases, and perform server maintenance and updates. When I'm not working, I volunteer my time with The North 
+		  Ridge, a local Star Wars group that appears throughout the Buffalo area at charity events, most notably 
+		  Star Wars Night with the Buffalo Bisons.</h3>
 	</div>
   <div  class="section" id="mainPageSectionThree">
 	  <div class="section3Section" id="section3Section1">
