--- a/index.html
+++ b/index.html
@@ -89,7 +89,14 @@
 
 </div>
 
-  <div  class="section" id="mainPageSectionFour"><h2>This is a test4</h2></div>
+  <div  class="section" id="mainPageSectionFour">
+	<div class="container" id="section4Container">
+		<div id="contactMeFoot">copyright 2020 -  William Breindel</div>
+		</div>
+	</div>
+	
+	
+</div>
   <div  class="section" id="mainPageSectionFive"><h2>This is a test5</h2></div>
   <div  class="section" id="mainPageSectionSix"><h2>This is a test6</h2></div>
 	
