--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 </div>
 
   <div  class="section" id="mainPageSectionFour">
-	<div class="container" id="section4Container">
+	<div class="container2" id="section4Container">
 		<div id="contactMeFoot">copyright 2020 -  William Breindel</div>
 		</div>
 	</div>
