--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 </div>
 
   <div  class="section" id="mainPageSectionFour">
-	<div class="container2" id="section4Container">
-		<div id="contactMeFoot">copyright 2020 -  William Breindel</div>
-		</div>
+	<div class="container2" id="section4Container"></div>
+		<div id="mainPageFoot">copyright 2020 -  William Breindel</div>
+		
 	</div>
 	
 	
