--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
   <div  class="section" id="mainPageSectionFour">
 	<div class="container2" id="section4Container"></div>
-		<div id="mainPageFoot">copyright 2020 -  William Breindel</div>
+		<div id="mainPageFoot">copyright 2020 -  William Breindel<br>Icons curtsey of <a href="https://www.iconfinder.com/ratch0013">Eucalyp Studio</a>Eucalyp Studio</div>
 		
 	</div>
 	
