--- a/index.html
+++ b/index.html
@@ -61,11 +61,12 @@
 			<tr><td class="section3TableColumn">Raspberry Pi Development</td></tr>
 			<tr><td class="section3TableColumn">SSH</td></tr>
 			<tr><td class="section3TableColumn">Wordpress/Bluehost</td></tr>
+			<tr><td class="section3TableColumn">Amazon Web Services</td></tr>
 			  </table>
 		  </div>
 	  <div class="section3Section" id="section3Section3">
 	  		<table class="section3Table">
-				<tr><td><h3>Projects I've worked on</h3></td></tr>
+				<tr><td><h3>Projects I've Worked On</h3></td></tr>
 				<tr><td><img class="section3Icon" src="http://www.williambreindel.com/projectLarge.png" alt="Projects Icon"></td></tr>
 		<tr><td class="section3TableColumn">Custom Client Relationship Management Site including:</td></tr>
 		<tr><td class="section3TableColumn">
@@ -83,7 +84,7 @@
 	  	<tr><td class="section3TableColumn">Customer Stat Site</td></tr>
 		<tr><td class="section3TableColumn">Licensing Website</td></tr>
 		<tr><td class="section3TableColumn">Company Website</td></tr>
-		<tr><td class="section3TableColumn">Custom Wordpress site development</td></tr>
+		<tr><td class="section3TableColumn">Custom Wordpress Site Development</td></tr>
 		  </table>
 	  </div>
 
@@ -91,7 +92,7 @@
 
   <div  class="section" id="mainPageSectionFour">
 	<div class="container2" id="section4Container"></div>
-		<div id="mainPageFoot">copyright 2020 -  William Breindel - Icons curtsey of <a href="https://www.iconfinder.com/ratch0013">Eucalyp Studio</a></div>
+		<div id="mainPageFoot">copyright 2020 -  William Breindel - Clip art courtesy of <a href="https://www.iconfinder.com/ratch0013">Eucalyp Studio</a></div>
 		
 	</div>
 	
