--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   <div  class="section" id="mainPageSectionThree">
 	  <div class="section3Section" id="section3Section1">
 		<table class="section3Table">
-			<tr><td><h3>Programming Languages</h3></td></tr>
-			<tr><td><img class="section3Icon" src="http://www.williambreindel.com/programmingLarge.png" alt="Programming Icon"></td></tr>
+			<tr class="headerRow"><td><h3>Programming Languages</h3></td></tr>
+			<tr class="imageRow"><td><img class="section3Icon" src="http://www.williambreindel.com/programmingLarge.png" alt="Programming Icon"></td></tr>
 			<tr><td class="section3TableColumn">PHP</td></tr>
 			<tr><td class="section3TableColumn">C#</td></tr>
 	  		<tr><td class="section3TableColumn">HTML5</td></tr>
@@ -52,8 +52,8 @@
 	  </div>
 	  <div class="section3Section" id="section3Section2">
 		  <table class="section3Table">
-			 <tr><td><h3>Additional Skills</h3></td></tr>
-			  <tr><td><img class="section3Icon" src="http://www.williambreindel.com/otherSkillsLarge.png" alt="Other Skills Icon"></td></tr>
+			 <tr class="headerRow"><td><h3>Additional Skills</h3></td></tr>
+			  <tr class="imageRow"><td><img class="section3Icon" src="http://www.williambreindel.com/otherSkillsLarge.png" alt="Other Skills Icon"></td></tr>
 			<tr><td class="section3TableColumn">MySQL</td></tr>
 			<tr><td class="section3TableColumn">SQLite</td></tr>
 	  		<tr><td class="section3TableColumn">Visual Studio</td></tr>
@@ -66,8 +66,8 @@
 		  </div>
 	  <div class="section3Section" id="section3Section3">
 	  		<table class="section3Table">
-				<tr><td><h3>Projects I've Worked On</h3></td></tr>
-				<tr><td><img class="section3Icon" src="http://www.williambreindel.com/projectLarge.png" alt="Projects Icon"></td></tr>
+				<tr class="headerRow"><td><h3>Projects I've Worked On</h3></td></tr>
+				<tr class="imageRow"><td><img class="section3Icon" src="http://www.williambreindel.com/projectLarge.png" alt="Projects Icon"></td></tr>
 		<tr><td class="section3TableColumn">Custom Client Relationship Management Site including:</td></tr>
 		<tr><td class="section3TableColumn">
 			<ul class="section3List">
