--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
 
   <div  class="section" id="mainPageSectionFour">
 	<div class="container2" id="section4Container"></div>
-		<div id="mainPageFoot">copyright 2020 -  William Breindel - Clip art courtesy of <a href="https://www.iconfinder.com/ratch0013">Eucalyp Studio</a></div>
+		<div id="mainPageFoot"><a href="http://www.williambreindel.com/" id="menuContactLink">Copyright 2020 -  William Breindel - </a>
+			<a href="https://www.iconfinder.com/ratch0013">Clip art courtesy of Eucalyp Studio</a></div>
 		
 	</div>
 	
