--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
   <div  class="section" id="mainPageSectionFour">
 	<div class="container2" id="section4Container"></div>
-		<div id="mainPageFoot"><a href="http://www.williambreindel.com/"  id="menuHomeLink">Copyright 2020 -  William Breindel - </a>
+		<div id="mainPageFoot"><a href="http://www.williambreindel.com/"  id="menuHomeLink">Copyright 2020 -  William Breindel </a>
 			<a href="https://www.iconfinder.com/ratch0013" id="menuContactLink">Clip art courtesy of Eucalyp Studio</a></div>
 		
 	</div>
