--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	  </div>
 	</div>
   <div  class="section" id="mainPageSectionTwo">
-	  <h2>Hi, I'm William Breindel. My friends call me Bill.<br> I'm a full-stack web developer.</h2>
+	  <h2>Hi, I'm William Breindel. My friends call me Bill.<br> I'm a full-stack web developer in Buffalo, NY.</h2>
 	  <img id="myMainPagePic" src="http://www.williambreindel.com/me1.png" alt="My Picture">
 	  <h3 id="section3Bio">I've been lucky to have a career that I'm passionate about for the last fifteen years, 
 		  working for a company that creates and sells lasertag hardware and software all over the world. 
