--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 	  		<table class="section3Table">
 				<tr class="headerRow"><td><h3>Projects I've Worked On</h3></td></tr>
 				<tr class="imageRow"><td id="sect3Icon3Column"><img class="section3Icon" src="http://www.williambreindel.com/projectLarge.png" alt="Projects Icon"></td></tr>
-		<tr><td class="section3TableColumn">Custom Client Relationship Management Site including:</td></tr>
+		<tr><td class="section3TableColumn">Custom CRM system which includes:</td></tr>
 		<tr><td class="section3TableColumn">
 			<ul class="section3List">
 				<li>Ordering</li>
