--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="http://www.williambreindel.com/jquery.fullPage.min.css" />
-<link rel="stylesheet" type="text/css" href="http://www.williambreindel.com/index.css" />
-<link href="https://fonts.googleapis.com/css?family=Lato|Source+Serif+Pro&display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="http://www.williambreindel.com/jquery.fullPage.min.css" />
+	<link rel="stylesheet" type="text/css" href="http://www.williambreindel.com/index.css" />
+	<link href="https://fonts.googleapis.com/css?family=Lato|Source+Serif+Pro&display=swap" rel="stylesheet">
+	<meta content="width=device-width, initial-scale=1" name="viewport" />
 </head>
 <body>
 	<nav class="topMenu" role="navigation">
