--- a/index.html
+++ b/index.html
@@ -47,7 +47,19 @@
 			<tr><td class="section3TableColumn">XML</td></tr>
 			<tr><td class="section3TableColumn">JSON</td></tr>
 		  </table>
-	  
+	  <table class="section3TableMobile">
+			           <tr class="headerRow"><td colspan="2"><h3>Programming Languages</h3></td></tr>
+			<tr class="imageRow"><td><img class="section3Icon" src="http://www.williambreindel.com/programmingLarge.png" alt="Programming Icon"></td><td><table>
+			<tr><td class="section3TableColumn">PHP</td></tr>
+			<tr><td class="section3TableColumn">C#</td></tr>
+	  		<tr><td class="section3TableColumn">HTML5</td></tr>
+			<tr><td class="section3TableColumn">CSS</td></tr>
+			<tr><td class="section3TableColumn">Javascript</td></tr>
+			<tr><td class="section3TableColumn">JQuery</td></tr>
+			<tr><td class="section3TableColumn">XML</td></tr>
+			<tr><td class="section3TableColumn">JSON</td></tr>
+               </table></td>
+		  </tr></table>
 	  
 	  
 	  </div>
