--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@
 			<tr><td class="section3TableColumn">JSON</td></tr>
 		  </table>
 	  <table class="section3TableMobile">
-			           <tr class="headerRow"><td colspan="2"><h3>Programming Languages</h3></td></tr>
-			<tr class="imageRow"><td><img class="section3Icon" src="http://www.williambreindel.com/programmingLarge.png" alt="Programming Icon"></td><td><table>
-			<tr><td class="section3TableColumn">PHP</td></tr>
-			<tr><td class="section3TableColumn">C#</td></tr>
-	  		<tr><td class="section3TableColumn">HTML5</td></tr>
-			<tr><td class="section3TableColumn">CSS</td></tr>
-			<tr><td class="section3TableColumn">Javascript</td></tr>
-			<tr><td class="section3TableColumn">JQuery</td></tr>
-			<tr><td class="section3TableColumn">XML</td></tr>
-			<tr><td class="section3TableColumn">JSON</td></tr>
+			           <tr class="headerRowMobile"><td colspan="2"><h3>Programming Languages</h3></td></tr>
+			<tr class="imageRowMobile"><td><img class="section3Icon" src="http://www.williambreindel.com/programmingLarge.png" alt="Programming Icon"></td><td><table>
+			<tr><td class="section3TableColumnMobile">PHP</td></tr>
+			<tr><td class="section3TableColumnMobile">C#</td></tr>
+	  		<tr><td class="section3TableColumnMobile">HTML5</td></tr>
+			<tr><td class="section3TableColumnMobile">CSS</td></tr>
+			<tr><td class="section3TableColumnMobile">Javascript</td></tr>
+			<tr><td class="section3TableColumnMobile">JQuery</td></tr>
+			<tr><td class="section3TableColumnMobile">XML</td></tr>
+			<tr><td class="section3TableColumnMobile">JSON</td></tr>
                </table></td>
 		  </tr></table>
 	  
