--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 			<tr><td class="section3TableColumn">JSON</td></tr>
 		  </table>
 	  <table class="section3TableMobile">
-			           <tr class="headerRowMobile"><td colspan="2"><h3>Programming Languages</h3></td></tr>
+			           <tr class="headerRowMobile"><td colspan="2"><h4 class="h4mobile">Programming Languages</h4></td></tr>
 			<tr class="imageRowMobile"><td><img class="section3Icon" src="http://www.williambreindel.com/programmingLarge.png" alt="Programming Icon"></td><td><table>
 			<tr><td class="section3TableColumnMobile">PHP</td></tr>
 			<tr><td class="section3TableColumnMobile">C#</td></tr>
