--- a/index.html
+++ b/index.html
@@ -48,16 +48,10 @@
 			<tr><td class="section3TableColumn">JSON</td></tr>
 		  </table>
 	  <table class="section3TableMobile">
-			           <tr class="headerRowMobile"><td colspan="2"><h4 class="h4mobile">Programming Languages</h4></td></tr>
-			<tr class="imageRowMobile"><td><img class="section3Icon" src="http://www.williambreindel.com/programmingLarge.png" alt="Programming Icon"></td><td><table>
-			<tr><td class="section3TableColumnMobile">PHP</td></tr>
-			<tr><td class="section3TableColumnMobile">C#</td></tr>
-	  		<tr><td class="section3TableColumnMobile">HTML5</td></tr>
-			<tr><td class="section3TableColumnMobile">CSS</td></tr>
-			<tr><td class="section3TableColumnMobile">Javascript</td></tr>
-			<tr><td class="section3TableColumnMobile">JQuery</td></tr>
-			<tr><td class="section3TableColumnMobile">XML</td></tr>
-			<tr><td class="section3TableColumnMobile">JSON</td></tr>
+<tr><td class="section3TableColumnMobile">PHP</td><td class="section3TableColumnMobile">C#</td></tr>
+	  		<tr><td class="section3TableColumnMobile">HTML5</td><td class="section3TableColumnMobile">CSS</td></tr>
+			<tr><td class="section3TableColumnMobile">Javascript</td><td class="section3TableColumnMobile">JQuery</td></tr>
+			<tr><td class="section3TableColumnMobile">XML</td><td class="section3TableColumnMobile">JSON</td></tr>
                </table></td>
 		  </tr></table>
 	  
