--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <div  class="section" id="mainPageSectionThree">
 	  <div class="section3Section" id="section3Section1">
 		<table class="section3Table">
-			<tr class="headerRow"><td><h4 class="h4mobile">Programming Languages</h4></td></tr>
+			<tr class="headerRow"><td><h3>Programming Languages</h3></td></tr>
 			<tr class="imageRow"><td><img class="section3Icon" src="http://www.williambreindel.com/programmingLarge.png" alt="Programming Icon"></td></tr>
 			<tr><td class="section3TableColumn">PHP</td></tr>
 			<tr><td class="section3TableColumn">C#</td></tr>
@@ -48,6 +48,8 @@
 			<tr><td class="section3TableColumn">JSON</td></tr>
 		  </table>
 	  <table class="section3TableMobile">
+		  <tr class="headerRowMobile"><td colspan="2"><h4 class="h4mobile">Programming Languages</h4></td></tr>
+			<tr class="imageRowMobile"><td><img class="section3IconMobile" src="http://www.williambreindel.com/programmingLarge.png" alt="Programming Icon"></td><td><table>
 <tr><td class="section3TableColumnMobile">PHP</td><td class="section3TableColumnMobile">C#</td></tr>
 	  		<tr><td class="section3TableColumnMobile">HTML5</td><td class="section3TableColumnMobile">CSS</td></tr>
 			<tr><td class="section3TableColumnMobile">Javascript</td><td class="section3TableColumnMobile">JQuery</td></tr>
