--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 	  <div class="section3Section" id="section3Section2">
 		  <table class="section3Table">
 			 <tr class="headerRow"><td><h3>Additional Skills</h3></td></tr>
-			  <tr class="imageRow"><td><img class="section3Icon" src="http://www.williambreindel.com/otherSkillsLarge.png" alt="Other Skills Icon"></td></tr>
+			  <tr class="imageRow"><td class="mobileIcontd"><img class="section3Icon" src="http://www.williambreindel.com/otherSkillsLarge.png" alt="Other Skills Icon"></td></tr>
 			<tr><td class="section3TableColumn">MySQL</td></tr>
 			<tr><td class="section3TableColumn">SQLite</td></tr>
 	  		<tr><td class="section3TableColumn">Visual Studio</td></tr>
@@ -75,7 +75,7 @@
 		  
 		  <table class="section3TableMobile">
 			<tr class="headerRowMobile"><td colspan="2"><h4 class="h4mobile">Additional Skills</h4></td></tr>
-			  <tr class="imageRowMobile"><td><img class="section3IconMobile" src="http://www.williambreindel.com/otherSkillsLarge.png" alt="Other Skills Icon"></td><td><table>
+			  <tr class="imageRowMobile"><td class="mobileIcontd"><img class="section3IconMobile" src="http://www.williambreindel.com/otherSkillsLarge.png" alt="Other Skills Icon"></td><td><table>
                   
 			<tr><td class="section3TableColumnMobile">MySQL</td><td class="section3TableColumnMobile">SQLite</td></tr>
 	  		<tr><td class="section3TableColumnMobile">Visual Studio</td><td class="section3TableColumnMobile">Linux</td></tr>
