--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
 	  </div>
 	</div>
   <div  class="section" id="mainPageSectionTwo">
-	  <h2>Hi, I'm William Breindel. My friends call me Bill.<br> I'm a full-stack web developer in Buffalo, NY.</h2>
+	  <h2 id="mainPageSectionTwoHeader">Hi, I'm William Breindel. My friends call me Bill.<br> I'm a full-stack web developer in Buffalo, NY.</h2>
+	  <h4 id="mainPageSectionTwoHeaderMobile">Hi, I'm William Breindel. My friends call me Bill.<br> I'm a full-stack web developer in Buffalo, NY.</h4>
 	  <img id="myMainPagePic" src="http://www.williambreindel.com/me1.png" alt="My Picture">
-	  <h3 id="section3Bio">I've been lucky to have a career that I'm passionate about for the last fifteen years, 
+	  <h3 id="section2Bio">I've been lucky to have a career that I'm passionate about for the last fifteen years, 
 		  working for a company that creates and sells lasertag hardware and software all over the world. 
 		  I've done a variety of jobs including client management, business/systems analyst, and QA, 
 		  but for the past several years my focus has been on development. I am motivated by my relationship 
@@ -32,6 +33,14 @@
 		  databases, and perform server maintenance and updates. When I'm not working, I volunteer my time with The North 
 		  Ridge, a local Star Wars group that appears throughout the Buffalo area at charity events, most notably 
 		  Star Wars Night with the Buffalo Bisons. You might know me as Director Krennic.</h3>
+	  	  <h5 id="section2BioMobile">I've been lucky to have a career that I'm passionate about for the last fifteen years, 
+		  working for a company that creates and sells lasertag hardware and software all over the world. 
+		  I've done a variety of jobs including client management, business/systems analyst, and QA, 
+		  but for the past several years my focus has been on development. I am motivated by my relationship 
+		  with clients and my love of the game to create fun, interactive user experiences. I build and maintain websites, 
+		  databases, and perform server maintenance and updates. When I'm not working, I volunteer my time with The North 
+		  Ridge, a local Star Wars group that appears throughout the Buffalo area at charity events, most notably 
+		  Star Wars Night with the Buffalo Bisons. You might know me as Director Krennic.</h5>
 	</div>
   <div  class="section" id="mainPageSectionThree">
 	  <div class="section3Section" id="section3Section1">
