--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				<tr class="headerRow"><td><h3>Projects I've Worked On</h3></td></tr>
 				<tr class="imageRow"><td id="sect3Icon3Column"><img class="section3Icon" src="http://www.williambreindel.com/projectLarge.png" alt="Projects Icon"></td></tr>
 		<tr><td class="section3TableColumn">Custom CRM system which includes:</td></tr>
-		<tr><td class="section3TableColumn">
+		<tr><td class="section3TableColumn" id="section3TableColumnList">
 			<ul class="section3List">
 				<li>Ordering</li>
 				<li>Ticketing/Support</li>
