--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <div  class="section" id="mainPageSectionThree">
 	  <div class="section3Section" id="section3Section1">
 		<table class="section3Table">
-			<tr class="headerRow"><td><h3>Programming Languages</h3></td></tr>
+			<tr class="headerRow"><td><h3 class="h3Normal">Programming Languages</h3><h4 class="h4Landscape">Programming Languages</h4></td></tr>
 			<tr class="imageRow"><td><img class="section3Icon" src="http://www.williambreindel.com/programmingLarge.png" alt="Programming Icon"></td></tr>
 			<tr><td class="section3TableColumn">PHP</td></tr>
 			<tr><td class="section3TableColumn">C#</td></tr>
@@ -70,7 +70,7 @@
 	  </div>
 	  <div class="section3Section" id="section3Section2">
 		  <table class="section3Table">
-			 <tr class="headerRow"><td><h3>Additional Skills</h3></td></tr>
+			 <tr class="headerRow"><td><h3 class="h3Normal">Additional Skills</h3><h4 class="h4Landscape">Additional Skills</h4></td></tr>
 			  <tr class="imageRow"><td class="mobileIcontd"><img class="section3Icon" src="http://www.williambreindel.com/otherSkillsLarge.png" alt="Other Skills Icon"></td></tr>
 			<tr><td class="section3TableColumn">MySQL</td></tr>
 			<tr><td class="section3TableColumn">SQLite</td></tr>
@@ -97,7 +97,7 @@
 		  </div>
 	  <div class="section3Section" id="section3Section3">
 	  		<table class="section3Table">
-				<tr class="headerRow"><td><h3>Projects I've Worked On</h3></td></tr>
+				<tr class="headerRow"><td><h3 class="h3Normal">Projects I've Worked On</h3><h4 class="h4Landscape">Projects</h4></td></tr>
 				<tr class="imageRow"><td id="sect3Icon3Column"><img class="section3Icon" src="http://www.williambreindel.com/projectLarge.png" alt="Projects Icon"></td></tr>
 		<tr><td class="section3TableColumn">Custom CRM system which includes:</td></tr>
 		<tr><td class="section3TableColumn" id="section3TableColumnList">
