--- a/index.html
+++ b/index.html
@@ -245,6 +245,19 @@
 <script type="text/javascript" src="http://www.williambreindel.com/jquery.fullPage.min.js"></script>
 <script type="text/javascript" src="http://www.williambreindel.com/webflow.055c1ac13.js"></script>
 <script type="text/javascript">
+
+	var bg = $("#mainMenuContainer");
+
+function resizeBackground() {
+    bg.height( $(window).height() + 60);
+}
+
+$(window).resize(resizeBackground);
+	resizeBackground();
+	
+	
+	
+	
 	$(document).ready(function() {
 	    $('#fullpage').fullpage({
 		verticalCentered: true,
