--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     <div  class="section" id="mainPageSectionTwo">
 	  <h2 id="mainPageSectionTwoHeader">Hi, I'm William Breindel. My friends call me Bill.<br> I'm a full-stack web developer in Buffalo, NY.</h2>
 	  <h4 id="mainPageSectionTwoHeaderMobile">Hi, I'm William Breindel. My friends call me Bill.<br> I'm a full-stack web developer in Buffalo, NY.</h4>
-	  <img id="myMainPagePic" src="http://www.williambreindel.com/me1.png" alt="My Picture">
+	  <div id="page2PicDiv">
+		  <img id="myMainPagePic" src="http://www.williambreindel.com/me1.png" alt="My Picture">
+	    </div>
 	  <h3 id="section2Bio">I've been lucky to have a career that I'm passionate about for the last fifteen years, 
 		  working for a company that creates and sells lasertag hardware and software all over the world. 
 		  I've done a variety of jobs including client management, business/systems analyst, and QA, 
