--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="http://www.williambreindel.com/jquery.fullPage.min.css" />
-	<link rel="stylesheet" type="text/css" href="http://www.williambreindel.com/index.css" />
+	<link rel="stylesheet" type="text/css" href="https://www.williambreindel.com/jquery.fullPage.min.css" />
+	<link rel="stylesheet" type="text/css" href="https://www.williambreindel.com/index.css" />
 	<link href="https://fonts.googleapis.com/css?family=Lato|Source+Serif+Pro&display=swap" rel="stylesheet">
 	<meta content="width=device-width, initial-scale=1" name="viewport" />
 </head>
 <body>
   <nav class="topMenu" role="navigation">
-	<a href="http://www.williambreindel.com" id="menuHomeLink">Home</a>
-	<a href="http://www.williambreindel.com/contact.html" id="menuContactLink">Contact Me</a>
+	<a href="https://www.williambreindel.com" id="menuHomeLink">Home</a>
+	<a href="https://www.williambreindel.com/contact.html" id="menuContactLink">Contact Me</a>
   </nav>
   <div id="fullpage">
 	  <! ––  Page1 starts below   --!>
@@ -28,7 +28,7 @@
 	  <h2 id="mainPageSectionTwoHeader">Hi, I'm William Breindel. My friends call me Bill.<br> I'm a full-stack web developer in Buffalo, NY.</h2>
 	  <h4 id="mainPageSectionTwoHeaderMobile">Hi, I'm William Breindel. My friends call me Bill.<br> I'm a full-stack web developer in Buffalo, NY.</h4>
 	  <div id="page2PicDiv">
-		  <img id="myMainPagePic" src="http://www.williambreindel.com/me1.png" alt="My Picture">
+		  <img id="myMainPagePic" src="https://www.williambreindel.com/me1.png" alt="My Picture">
 	    </div>
 	  <h3 id="section2Bio">I've been lucky to have a career that I'm passionate about for the last fifteen years, 
 		  working for a company that creates and sells lasertag hardware and software all over the world. 
@@ -60,7 +60,7 @@
 				</tr>
 				<tr class="imageRow">
 					<td>
-						<img class="section3Icon" src="http://www.williambreindel.com/programmingLarge.png" alt="Programming Icon">
+						<img class="section3Icon" src="https://www.williambreindel.com/programmingLarge.png" alt="Programming Icon">
 					</td>
 				</tr>
 				<tr><td class="section3TableColumn">PHP</td></tr>
@@ -113,7 +113,7 @@
 			</tr>
 			<tr class="imageRow">
 				<td class="mobileIcontd">
-					<img class="section3Icon" src="http://www.williambreindel.com/otherSkillsLarge.png" alt="Other Skills Icon">
+					<img class="section3Icon" src="https://www.williambreindel.com/otherSkillsLarge.png" alt="Other Skills Icon">
 				</td>
 			</tr>
 			<tr><td class="section3TableColumn">MySQL</td></tr>
@@ -132,7 +132,7 @@
 				</td>
 			</tr>
 			<tr class="imageRowMobile">
-				<td class="mobileIcontd"><img class="section3IconMobile" src="http://www.williambreindel.com/otherSkillsLarge.png" alt="Other Skills Icon">
+				<td class="mobileIcontd"><img class="section3IconMobile" src="https://www.williambreindel.com/otherSkillsLarge.png" alt="Other Skills Icon">
 				</td>
 				<td>
 					<table>
@@ -166,7 +166,7 @@
 			</tr>
 			<tr class="imageRow">
 				<td id="sect3Icon3Column">
-					<img class="section3Icon" src="http://www.williambreindel.com/projectLarge.png" alt="Projects Icon">
+					<img class="section3Icon" src="https://www.williambreindel.com/projectLarge.png" alt="Projects Icon">
 				</td>
 			</tr>
 			<tr><td class="section3TableColumn">Custom CRM system which includes:</td></tr>
@@ -196,7 +196,7 @@
 			</tr>
 			<tr class="imageRowMobile">
 				<td class="mobileIcontd">
-					<img class="section3IconMobile" src="http://www.williambreindel.com/projectLarge.png" alt="Projects Icon">
+					<img class="section3IconMobile" src="https://www.williambreindel.com/projectLarge.png" alt="Projects Icon">
 				</td>
 				<td>
 					<table>
@@ -234,18 +234,18 @@
   <div  class="section" id="mainPageSectionFour">
 	<div class="container2" id="section4Container"></div>
 		<div id="mainPageFoot">
-			<a href="http://www.williambreindel.com/"  id="footCopyright">Copyright 2020 -  William Breindel </a>
+			<a href="https://www.williambreindel.com/"  id="footCopyright">Copyright 2020 -  William Breindel </a>
 			<a href="https://www.iconfinder.com/ratch0013" id="footFYI">Clip art courtesy of Eucalyp Studio</a>
 	  	</div>	
 	</div>
     </div>
   </div>
 </body>
-<script type="text/javascript" src="http://www.williambreindel.com/jquery.min.js"></script>
-<script type="text/javascript" src="http://www.williambreindel.com/jquery.easing.min.js"></script>
-<script type="text/javascript" src="http://www.williambreindel.com/jquery.slimscroll.min.js"></script>
-<script type="text/javascript" src="http://www.williambreindel.com/jquery.fullPage.min.js"></script>
-<script type="text/javascript" src="http://www.williambreindel.com/webflow.055c1ac13.js"></script>
+<script type="text/javascript" src="https://www.williambreindel.com/jquery.min.js"></script>
+<script type="text/javascript" src="https://www.williambreindel.com/jquery.easing.min.js"></script>
+<script type="text/javascript" src="https://www.williambreindel.com/jquery.slimscroll.min.js"></script>
+<script type="text/javascript" src="https://www.williambreindel.com/jquery.fullPage.min.js"></script>
+<script type="text/javascript" src="https://www.williambreindel.com/webflow.055c1ac13.js"></script>
 <script type="text/javascript">
 	function resetHeight(){
 	// reset the section/column height to that of the inner browser
