--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
 <html>
 <head>
 <title>Contact William Breindel</title>
-<link rel="stylesheet" type="text/css" href="http://www.williambreindel.com/index.css" />
+<link rel="stylesheet" type="text/css" href="https://www.williambreindel.com/index.css" />
 <link href="https://fonts.googleapis.com/css?family=Lato|Source+Serif+Pro&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -13,8 +13,8 @@
 		<div class="cloud"  id="contactCloud">
 	<nav class="topMenu" role="navigation">
 		 <div></div>
-		<a href="http://www.williambreindel.com" id="menuHomeLink">Home</a>
-		<a href="http://www.williambreindel.com/contact.html" id="menuContactLink">Contact Me</a>
+		<a href="https://www.williambreindel.com" id="menuHomeLink">Home</a>
+		<a href="https://www.williambreindel.com/contact.html" id="menuContactLink">Contact Me</a>
 		 <div></div>
 	</nav>
 	<div id="contactMeTop"></div>
