--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="https://www.w3.org/1999/xhtml">
 
 <html>
 <head>
@@ -80,7 +80,7 @@
 				</tr>
 				<tr class="imageRowMobile">
 					<td class="mobileIcontd">
-						<img class="section3IconMobile" src="http://www.williambreindel.com/programmingLarge.png" alt="Programming Icon">
+						<img class="section3IconMobile" src="https://www.williambreindel.com/programmingLarge.png" alt="Programming Icon">
 					</td>
 					<td>
 						<table>
