--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 <script type="text/javascript" src="https://www.williambreindel.com/jquery.fullPage.min.js"></script>
 <script type="text/javascript" src="https://www.williambreindel.com/webflow.055c1ac13.js"></script>
 <script type="text/javascript">
-	function resetHeight(){
+/*	function resetHeight(){
 	// reset the section/column height to that of the inner browser
 	document.getElementById("mainMenuContainer").style.minHeight = window.innerHeight + "px";
 	//document.getElementById("column-inside-section-before-scroll").style.minHeight = window.innerHeight + "px";
@@ -255,7 +255,7 @@
 // reset the height whenever the window's resized
 window.addEventListener("resize", resetHeight);
 // called to initially set the height.
-resetHeight();
+resetHeight(); */
 	
 	
 	$(document).ready(function() {
