--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 	<meta content="width=device-width, initial-scale=1" name="viewport" />
 </head>
 <body>
-  <nav class="topMenu" role="navigation">
+ <! ––  <nav class="topMenu" role="navigation">
 	<a href="https://www.williambreindel.com" id="menuHomeLink">Home</a>
 	<a href="https://www.williambreindel.com/contact.html" id="menuContactLink">Contact Me</a>
-  </nav>
+  </nav>  --!>
   <div id="fullpage">
 	  <! ––  Page1 starts below   --!>
      <div  class="section" id="mainPageSectionOne">
@@ -232,7 +232,43 @@
   </div>
 	  <! ––  Page4 starts below   --!>
   <div  class="section" id="mainPageSectionFour">
-	<div class="container2" id="section4Container"></div>
+	<div class="container2" id="section4Container">
+	    <form id="contactForm" action="https://forms.un-static.com/forms/07e374b1fcfcdfb1196554775234f4809991f046"  method="post">
+	  
+	  
+	  <table>
+		  <tr class="nonMessageRow">
+		  <td>
+        		<label for="nameFormButton">Name: </label></td>
+		  <td>
+			  <input class="contactMeFormButton" id="nameFormButton" name="nameFormButton" type="text" placeholder="Name">
+			  </td>
+		  </tr>
+        	  <tr class="nonMessageRow">
+			<td>
+  			<label for="companyNameFormButton">Company Name: </label></td>
+			  <td>
+  			<input class="contactMeFormButton" id="companyNameFormButton" name="companyNameFormButton" type="text" placeholder="Company Name"></td>
+		  </tr>
+		  <tr class="nonMessageRow"><td style="text-align:center">
+			  <label for="emailAddressFormButton" required>Email Address: </label></td>
+			<td> 
+ 			 <input class="contactMeFormButton" id="emailAddressFormButton" name="emailAddressFormButton" type="email" placeholder="Email Address"></input>
+		  </tr>
+		  <tr class="nonMessageRow"><td colspan="2">
+			<label for="messageTextFormButton">Message: </label></td></tr>
+		<tr class="messageRow"><td colspan="2" >
+  			<textarea class="messageTextFormButton" id="messageTextFormButton" name="messageTextFormButton"></textarea></td></tr>
+	 
+	  <tr id="nonMessageRow"><td colspan="2">
+  			<input id="submitButtonFormButton" type ="submit" value="Press to send"></input></td></tr></table>
+ 	 </form>
+	  
+	  
+	  
+	  
+	  
+	  </div>
 		<div id="mainPageFoot">
 			<a href="https://www.williambreindel.com/"  id="footCopyright">Copyright 2020 -  William Breindel </a>
 			<a href="https://www.iconfinder.com/ratch0013" id="footFYI">Clip art courtesy of Eucalyp Studio</a>
