--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
 	  <! ––  Page4 starts below   --!>
   <div  class="section" id="mainPageSectionFour">
 	<div class="container2" id="section4Container">
+		<div class="container" id="contactContainer">
 	    <form id="contactForm" action="https://forms.un-static.com/forms/07e374b1fcfcdfb1196554775234f4809991f046"  method="post">
 	  
 	  
@@ -270,7 +271,7 @@
 			<a href="https://www.williambreindel.com/"  id="footCopyright">Copyright 2020 -  William Breindel </a>
 			<a href="https://www.iconfinder.com/ratch0013" id="footFYI">Clip art courtesy of Eucalyp Studio</a>
 	  	</div>	
-	</div>
+	</div></div>
     </div>
   </div>
 </body>
