--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 				<tr><td class="section3TableColumn">CSS</td></tr>
 				<tr><td class="section3TableColumn">Javascript</td></tr>
 				<tr><td class="section3TableColumn">JQuery</td></tr>
-				<tr><td class="section3TableColumn">XML</td></tr>
-				<tr><td class="section3TableColumn">JSON</td></tr>
+				<tr><td class="section3TableColumn">XML / JSON</td></tr>
+				<tr><td class="section3TableColumn">React/td></tr>
 			</table>
 		  	<table class="section3TableMobile" id="section3TableMobileSect1">
 			  	<tr class="headerRowMobile">
@@ -166,12 +166,12 @@
 					<img class="section3Icon" src="https://www.williambreindel.com/projectLarge.png" alt="Projects Icon">
 				</td>
 			</tr>
-			<tr><td class="section3TableColumn">Custom CRM system which includes:</td></tr>
+			<tr><td class="section3TableColumn">Custom support site which includes:</td></tr>
 			<tr>
 				<td class="section3TableColumn" id="section3TableColumnList">
 					<ul class="section3List">
 						<li>Ordering</li>
-						<li>Ticketing/Support</li>
+						<li>Ticketing</li>
 						<li>Knowledge Base</li>
 						<li>Customer Accounts</li>
 						<li>Reporting/Analytics</li>
