--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<tr><td class="section3TableColumn">Javascript</td></tr>
 				<tr><td class="section3TableColumn">JQuery</td></tr>
 				<tr><td class="section3TableColumn">XML / JSON</td></tr>
-				<tr><td class="section3TableColumn">React/td></tr>
+				<tr><td class="section3TableColumn">React</td></tr>
 			</table>
 		  	<table class="section3TableMobile" id="section3TableMobileSect1">
 			  	<tr class="headerRowMobile">
