--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="container" id="mainMenuContainer">
 			<div class="cloud" id="mainMenuCloud"></div>
 			<div id="frontPageName">
-				<h1 class="frontPageNameH">William Breindel</h1><br><h4 class="frontPageNameH">Web Developer</h4>
+				<h1 class="frontPageNameH">William Breindel<br><span id="frontPageNameH2">Web Developer</span></h1>
 			</div>
 		  </div>
     </div>
