--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 								<td class="section3TableColumnMobile">Javascript</td><td class="section3TableColumnMobile">JQuery</td>
 							</tr>
 							<tr>
-								<td class="section3TableColumnMobile">XML</td><td class="section3TableColumnMobile">JSON</td>
+								<td class="section3TableColumnMobile">XML/Json</td><td class="section3TableColumnMobile">React</td>
 							</tr>
 		       				</table>
 					</td>
@@ -175,7 +175,7 @@
 						<li>Knowledge Base</li>
 						<li>Customer Accounts</li>
 						<li>Reporting/Analytics</li>
-						<li>FAQ/Troubleshooting Guides</li>
+						<li>Troubleshooting Guides</li>
 					</ul>
 				</td>
 			</tr>
@@ -199,25 +199,24 @@
 					<table>
 						<tr>
 							<td class="section3TableColumnMobile">Reservation System</td>
-							<td class="section3TableColumnMobile">Customer Stat Site</td>
+							<td class="section3TableColumnMobile">Custom support site which includes:</td>
 						</tr>		
 						<tr>
 							<td class="section3TableColumnMobile">Licensing Website</td>
-							<td class="section3TableColumnMobile">Custom CRM system which includes:</td>
-						</tr>
-						<tr>
 							<td class="section3TableColumnMobile">Company Website</td>
 							<td rowspan="3" class="section3TableColumnMobile">
 								<ul class="section3ListMobile">
 									<li>Ordering</li>
-									<li>Ticketing/Support</li>
+									<li>Ticketing</li>
 									<li>Knowledge Base</li>
 									<li>Customer Accounts</li>
 									<li>Reporting/Analytics</li>
-									<li>FAQ/Troubleshooting Guides</li>
+									<li>Troubleshooting Guides</li>
 								</ul>
 							</td>
 						</tr>
+						<tr>
+						<td class="section3TableColumnMobile">Customer Stat Site</td></tr>
 					    	<tr>
 							<td class="section3TableColumnMobile">Custom Wordpress Site Development</td>
 						</tr>
