--- a/index.html
+++ b/index.html
@@ -203,7 +203,6 @@
 						</tr>		
 						<tr>
 							<td class="section3TableColumnMobile">Licensing Website</td>
-							<td class="section3TableColumnMobile">Company Website</td>
 							<td rowspan="3" class="section3TableColumnMobile">
 								<ul class="section3ListMobile">
 									<li>Ordering</li>
@@ -215,6 +214,9 @@
 								</ul>
 							</td>
 						</tr>
+												<tr>
+						<td class="section3TableColumnMobile">Company Website</td></tr>
+					    	<tr>
 						<tr>
 						<td class="section3TableColumnMobile">Customer Stat Site</td></tr>
 					    	<tr>
