--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 	    </div>
 	  <h3 id="section2Bio">I've been lucky to have a career that I'm passionate about for the last fifteen years, 
 		  working for a company that creates and sells lasertag hardware and software all over the world. 
-		  I've done a variety of jobs including client management, business/systems analyst, and QA, 
-		  but for the past several years my focus has been on development. I am motivated by my relationship 
+		  I have worn many hats, but for the past several years my focus has been on development. I am motivated by my relationship 
 		  with clients and my love of the game to create fun, interactive user experiences. I build and maintain websites, 
 		  databases, and perform server maintenance and updates. When I'm not working, I volunteer my time with The North 
 		  Ridge, a local Star Wars group that appears throughout the Buffalo area at charity events, most notably 
