--- a/index.html
+++ b/index.html
@@ -212,13 +212,12 @@
 								</ul>
 							</td>
 						</tr>
-												<tr>
-						<td class="section3TableColumnMobile">Company Website</td></tr>
+												
 					    	<tr>
 						<tr>
 						<td class="section3TableColumnMobile">Customer Stat Site</td></tr>
 					    	<tr>
-							<td class="section3TableColumnMobile">Custom Wordpress Site Development</td>
+							<td class="section3TableColumnMobile">Custom Wordpress Site</td>
 						</tr>
 					</table>
 				</td>
