--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	  <! ––  Page2 starts below   --!>
     <div  class="section" id="mainPageSectionTwo">
 	  <h2 id="mainPageSectionTwoHeader">Hi, I'm William Breindel. My friends call me Bill.<br> I'm a full-stack web developer in Buffalo, NY.</h2>
-	  <h4 id="mainPageSectionTwoHeaderMobile">Hi, I'm William Breindel. My friends call me Bill.<br> I'm a full-stack web developer in Buffalo, NY.</h4>
+	  <h4 id="mainPageSectionTwoHeaderMobile">Hi, I'm William Breindel. My friends <br>call me Bill.  I'm a full-stack <br>web developer in Buffalo, NY.</h4>
 	  <h5 style="display:none">ddd</h5>
 	    <div id="page2PicDiv">
 		  <img id="myMainPagePic" src="https://www.williambreindel.com/Bill.jpg" alt="My Picture">
