--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 					<table>
 						<tr>
 							<td class="section3TableColumnMobile">Reservation System</td>
-							<td class="section3TableColumnMobile">Custom support site which includes:</td>
+							<td class="section3TableColumnMobile" style="text-align:center;">Custom support site <br>which includes:</td>
 						</tr>		
 						<tr>
 							<td class="section3TableColumnMobile">Licensing Website</td>
@@ -214,9 +214,9 @@
 							</td>
 						</tr>
 						<tr>
-						<td class="section3TableColumnMobile">Customer Stat Site</td></tr>
+						<td class="section3TableColumnMobile">Customer <br>Stat Site</td></tr>
 					    	<tr>
-							<td class="section3TableColumnMobile">Custom Wordpress Site</td>
+							<td class="section3TableColumnMobile">Custom <br>Wordpress Site</td>
 						</tr>
 					</table>
 				</td>
