--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 		<div class="container" id="mainMenuContainer">
 			<div class="cloud" id="mainMenuCloud"></div>
 			<div id="frontPageName">
-				<h1 class="frontPageNameH">William Breindel<br><span id="frontPageNameH2">Web Developer</span></h1>
+				<h1 class="frontPageNameH">William Breindel<br><span id="frontPageNameH2">Software Developer</span></h1>
 			</div>
 		  </div>
     </div>
 	  <! ––  Page2 starts below   --!>
     <div  class="section" id="mainPageSectionTwo">
-	  <h2 id="mainPageSectionTwoHeader">Hi, I'm William Breindel. My friends call me Bill.<br> I'm a full-stack web developer in Buffalo, NY.</h2>
-	  <h4 id="mainPageSectionTwoHeaderMobile">Hi, I'm William Breindel. My friends <br>call me Bill.  I'm a full-stack <br>web developer in Buffalo, NY.</h4>
+	  <h2 id="mainPageSectionTwoHeader">Hi, I'm William Breindel. My friends call me Bill.<br> I'm a full-stack software developer in Buffalo, NY.</h2>
+	  <h4 id="mainPageSectionTwoHeaderMobile">Hi, I'm William Breindel. My friends <br>call me Bill.  I'm a full-stack <br>software developer in Buffalo, NY.</h4>
 	  <h5 style="display:none">ddd</h5>
 	    <div id="page2PicDiv">
 		  <img id="myMainPagePic" src="https://www.williambreindel.com/Bill.jpg" alt="My Picture">
@@ -182,7 +182,7 @@
 			<tr><td class="section3TableColumn">Customer Stat Site</td></tr>
 			<tr><td class="section3TableColumn">Licensing Website</td></tr>
 			<tr><td class="section3TableColumn">Company Website</td></tr>
-			<tr><td class="section3TableColumn">Custom Wordpress Site Development</td></tr>
+			<tr><td class="section3TableColumn">Custom Wordpress Sites</td></tr>
 		  </table>
 		  <table class="section3TableMobile">
 			<tr class="headerRowMobile">
@@ -215,8 +215,10 @@
 						</tr>
 						<tr>
 						<td class="section3TableColumnMobile">Customer <br>Stat Site</td></tr>
+						<tr>
+							<td class="section3TableColumn">Company <br>Website</td></tr>
 					    	<tr>
-							<td class="section3TableColumnMobile">Custom <br>Wordpress Site</td>
+							<td class="section3TableColumnMobile">Custom <br>Wordpress Sites</td>
 						</tr>
 					</table>
 				</td>
