--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 						<tr>
 						<td class="section3TableColumnMobile">Customer <br>Stat Site</td></tr>
 						<tr>
-							<td class="section3TableColumn">Company <br>Website</td></tr>
+							<td class="section3TableColumnMobile">Company <br>Website</td></tr>
 					    	<tr>
 							<td class="section3TableColumnMobile">Custom <br>Wordpress Sites</td>
 						</tr>
