--- a/index.html
+++ b/index.html
@@ -216,9 +216,9 @@
 						<tr>
 						<td class="section3TableColumnMobile">Customer <br>Stat Site</td></tr>
 						<tr>
-							<td class="section3TableColumnMobile">Company <br>Website</td></tr>
+							<td class="section3TableColumnMobile">Custom <br>Wordpress Sites/td></tr>
 					    	<tr>
-							<td class="section3TableColumnMobile">Custom <br>Wordpress Sites</td>
+							<td class="section3TableColumnMobile">  <br>  </td>
 						</tr>
 					</table>
 				</td>
