--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 						<tr>
 						<td class="section3TableColumnMobile">Customer <br>Stat Site</td></tr>
 						<tr>
-							<td class="section3TableColumnMobile">Custom <br>Wordpress Sites/td></tr>
+							<td class="section3TableColumnMobile">Custom <br>Wordpress Sites</td></tr>
 					    	<tr>
 							<td class="section3TableColumnMobile">  <br>  </td>
 						</tr>
