--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 						<li>Ticketing</li>
 						<li>Knowledge Base</li>
 						<li>Customer Accounts</li>
-						<li>Reporting/Analytics</li>
+						<li>Reports/Analytics</li>
 						<li>Troubleshooting Guides</li>
 					</ul>
 				</td>
@@ -208,7 +208,7 @@
 									<li>Ticketing</li>
 									<li>Knowledge Base</li>
 									<li>Customer Accounts</li>
-									<li>Reporting/Analytics</li>
+									<li>Reports/Analytics</li>
 									<li>Troubleshooting Guides</li>
 								</ul>
 							</td>
