--- a/index.html
+++ b/index.html
@@ -293,6 +293,7 @@ resetHeight(); */
 	
 	
 	$(document).ready(function() {
+	    $('#mainPageSectionTwo').show();
 	    $('#fullpage').fullpage({
 		verticalCentered: true,
 		resize : true,
