--- a/index.html
+++ b/index.html
@@ -294,6 +294,8 @@ resetHeight(); */
 	
 	$(document).ready(function() {
 	    $('#mainPageSectionTwo').show();
+	    $('#mainPageSectionThree').show();
+	    $('#mainPageSectionFour').show();
 	    $('#fullpage').fullpage({
 		verticalCentered: true,
 		resize : true,
