--- a/newstuff.html
+++ b/newstuff.html
@@ -32,7 +32,16 @@
 </nav>
 <div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0">
   <h4 id="scrollspyHeading1">First heading</h4>
-
+  <div id="fullpage">
+	  <! ––  Page1 starts below   --!>
+     <div  class="section" id="mainPageSectionOne">
+		<div class="container" id="mainMenuContainer">
+			<div class="cloud" id="mainMenuCloud"></div>
+			<div id="frontPageName">
+				<h1 class="frontPageNameH">William Breindel<br><span id="frontPageNameH2">Software Developer</span></h1>
+			</div>
+		  </div>
+    </div>
   <h4 id="scrollspyHeading2">Second heading</h4>
   <p>...</p>
   <h4 id="scrollspyHeading3">Third heading</h4>
