--- a/newstuff.html
+++ b/newstuff.html
@@ -4,9 +4,9 @@
 <html>
 <head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-	<link rel="stylesheet" type="text/css" href="https://www.williambreindel.com/jquery.fullPage.min.css" />
+	  <!-- <link rel="stylesheet" type="text/css" href="https://www.williambreindel.com/jquery.fullPage.min.css" />
 	<link rel="stylesheet" type="text/css" href="https://www.williambreindel.com/index.css" />
-	<link href="https://fonts.googleapis.com/css?family=Lato|Source+Serif+Pro&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Lato|Source+Serif+Pro&display=swap" rel="stylesheet">  -->
 	<meta content="width=device-width, initial-scale=1" name="viewport" />
 </head>
 <body>
