--- a/newstuff.html
+++ b/newstuff.html
@@ -5,8 +5,10 @@
 <head>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	  <!-- <link rel="stylesheet" type="text/css" href="https://www.williambreindel.com/jquery.fullPage.min.css" />
-	<link rel="stylesheet" type="text/css" href="https://www.williambreindel.com/index.css" />
-	<link href="https://fonts.googleapis.com/css?family=Lato|Source+Serif+Pro&display=swap" rel="stylesheet">  -->
+	<link rel="stylesheet" type="text/css" href="https://www.williambreindel.com/index.css" />-->
+	<link href="https://fonts.googleapis.com/css?family=Lato|Source+Serif+Pro&display=swap" rel="stylesheet">  
+	<link rel="stylesheet" type="text/css" href="https://www.williambreindel.com/animate.min.css" />
+	<link rel="stylesheet" type="text/css" href="https://www.williambreindel.com/owl.carousel.min.css" />
 	<meta content="width=device-width, initial-scale=1" name="viewport" />
 </head>
 <body>
@@ -58,6 +60,10 @@
 
     </div>
   </header><!-- End Header -->
+
+	<link rel="stylesheet" type="text/css" href="https://www.williambreindel.com/owl.carousel.min.css" />
+	<script src="https://www.williambreindel.com/owl.carousel.min.js></script>
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
