--- a/newstuff.html
+++ b/newstuff.html
@@ -219,12 +219,43 @@
 	
 </head>
 <body>
-
+<!-- <nav id="navbar-example2" class="navbar navbar-light bg-light px-3">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <ul class="nav nav-pills">
+    <li class="nav-item">
+      <a class="nav-link" href="#scrollspyHeading1">First</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#scrollspyHeading2">Second</a>
+    </li>
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Dropdown</a>
+      <ul class="dropdown-menu">
+        <li><a class="dropdown-item" href="#scrollspyHeading3">Third</a></li>
+        <li><a class="dropdown-item" href="#scrollspyHeading4">Fourth</a></li>
+        <li><hr class="dropdown-divider"></li>
+        <li><a class="dropdown-item" href="#scrollspyHeading5">Fifth</a></li>
+      </ul>
+    </li>
+  </ul>
+</nav>
+<div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0">
+  <h4 id="scrollspyHeading1">First heading</h4>
+  <p>...</p>
+  <h4 id="scrollspyHeading2">Second heading</h4>
+  <p>...</p>
+  <h4 id="scrollspyHeading3">Third heading</h4>
+  <p>...</p>
+  <h4 id="scrollspyHeading4">Fourth heading</h4>
+  <p>...</p>
+  <h4 id="scrollspyHeading5">Fifth heading</h4>
+  <p>...</p>
+</div>   -->
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center">
 
-      <h1 class="logo mr-auto"><a href="index.html"><span>Com</span>pany</a></h1>
+      <h1 class="logo mr-auto"><a href="index.html"><span>William </span>Breindel</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -233,20 +264,6 @@
           <li class="active"><a href="index.html">Home</a></li>
 
           <li class="drop-down"><a href="">About</a>
-            <ul>
-              <li><a href="about.html">About Us</a></li>
-              <li><a href="team.html">Team</a></li>
-              <li><a href="testimonials.html">Testimonials</a></li>
-              <li class="drop-down"><a href="#">Deep Drop Down</a>
-                <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
-                </ul>
-              </li>
-            </ul>
           </li>
 
           <li><a href="services.html">Services</a></li>
@@ -268,10 +285,20 @@
     </div>
   </header><!-- End Header -->
 
-	<link rel="stylesheet" type="text/css" href="https://www.williambreindel.com/owl.carousel.min.css" />
-	<script src="https://www.williambreindel.com/owl.carousel.min.js></script>
+	  <!-- Vendor JS Files -->
+  <script src="https://www.williambreindel.com/jquery.min.js"></script>
+  <script src="https://www.williambreindel.com/bootstrap.bundle.min.js"></script>
+  <script src="https://www.williambreindel.com/jquery.easing.min.js"></script>
+  <script src="https://www.williambreindel.com/validate.js"></script>
+  <script src="https://www.williambreindel.com/jquery.sticky.js"></script>
+  <script src="https://www.williambreindel.com/isotope.pkgd.min.js"></script>
+  <script src="https://www.williambreindel.com/venobox.min.js"></script>
+  <script src="https://www.williambreindel.com/jquery.waypoints.min.js"></script>
+  <script src="https://www.williambreindel.com/owl.carousel.min.js"></script>
+  <script src="https://www.williambreindel.com/aos.js"></script>
 
+  <!-- Template Main JS File -->
+  <script src="https://www.williambreindel.com/js/main.js"></script>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
