--- a/newstuff.html
+++ b/newstuff.html
@@ -399,7 +399,7 @@
   <script src="https://www.williambreindel.com/aos.js"></script>
 
   <!-- Template Main JS File -->
-  <script src="https://www.williambreindel.com/js/main.js"></script>
+  <script src="https://www.williambreindel.com/main.js"></script>
 
 </body>
 </html>
