--- a/newstuff.html
+++ b/newstuff.html
@@ -257,14 +257,15 @@
     <div class="container d-flex align-items-center">
 
       <h1 class="logo mr-auto"><a href="index.html"><span>William </span>Breindel</a></h1>
-      <!-- Uncomment below if you prefer to use an image logo -->
+      <!-- Uncomment below if you prefer to use an image logo 
+ <nav class="nav-menu d-none d-lg-block navbar navbar-light bg-light px-3">-->
       <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
-      <nav class="nav-menu d-none d-lg-block navbar navbar-light bg-light px-3">
+      <nav class="navbar navbar-light bg-light px-3">
         <ul class="nav nav-pills>
-          <li class="active nav-item"><a class="nav-link" href="#scrollspyHeading1">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="#scrollspyHeading1">Home</a></li>
 
-          <li class="drop-down nav-item"><a class="nav-link" href="#scrollspyHeading2">About</a>
+          <li class="nav-item"><a class="nav-link" href="#scrollspyHeading2">About</a>
           </li>
 
           <li class="nav-item"><a class="nav-link" href="#scrollspyHeading3">Services</a></li>
