--- a/newstuff.html
+++ b/newstuff.html
@@ -261,7 +261,7 @@
  <nav class="nav-menu d-none d-lg-block navbar navbar-light bg-light px-3">-->
       <!-- <a href="index.html" class="logo mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
-      <nav class="navbar navbar-light bg-light px-3">
+      <nav id="mynavbar" class="navbar navbar-light bg-light px-3">
         <ul class="nav nav-pills>
           <li class="nav-item"><a class="nav-link" href="#scrollspyHeading1">Home</a></li>
 
@@ -287,7 +287,7 @@
 	
 	
 	
-	<div data-bs-spy="scroll" data-bs-target="#navbar-example2" data-bs-offset="0" class="scrollspy-example" tabindex="0">
+	<div data-bs-spy="scroll" data-bs-target="#mynavbar" data-bs-offset="0" class="scrollspy-example" tabindex="0">
   <h4 id="scrollspyHeading1">First heading</h4>
   <p>...hgjfjfj</p>
   <h4 id="scrollspyHeading2">Second heading</h4>
